Add more package keywords.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,18 @@
     "charsets",
     "subset",
     "subsets",
-    "google fonts"
+    "google fonts",
+    "google font",
+    "fonts",
+    "font",
+    "characters",
+    "character",
+    "character sets",
+    "character set",
+    "sets",
+    "set",
+    "languages",
+    "language"
   ],
   "main": "index.js",
   "dependencies": {
